# unify

./: .cache.json  .cache.ndjson  .cursorignore  .dockerignore  .env.advanced.example  .env.example  .envrc  .flake8  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .secrets.baseline  .test_traced_w_cached.cache.json  .venv  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INFRA.md  LICENSE  README.md  SECURITY.md  VISION.md  clone_adjacent.sh  cloudbuild-preview.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  conftest.py  dataset.py  delete_all_assistants.sh  desktop.sh  entrypoint.sh  generate_docs.py  new_test.py  pull_adjacent.sh  pydoc-markdown.yml  pyproject.toml  pyrightconfig.json  (+8 more)
.cursor/: Dockerfile  environment.json  worktrees.json
.cursor/rules/: aggressive-refactoring.mdc  cache-is-not-the-problem.mdc  ci-tests-cancel-zombies.mdc  concise-commit-messages-after-every-turn.mdc  cursor-temporary-debug-logging.mdc  design-overview.mdc  full-local-stack-first.mdc  git-commit-safety.mdc  git-history-for-context.mdc  gitignored-directory-access.mdc  local-development-environment.mdc  log-directory-navigation.mdc  no-backward-compatibility.mdc  no-fast-paths-or-heuristics.mdc  no-temporal-comments.mdc  no-test-info-in-production-code.mdc  no-try-except-blocks.mdc  parallelize-test-analysis.mdc  propose-ci-tests-for-commits.mdc  state-manager-base-public-apis.mdc  state-manager-prompts-vs-tool-docstrings.mdc  state-manager-roles.mdc  surgical-verification-before-tests.mdc  test-philosophy-symbolic-vs-eval.mdc  triggers-not-sleeps-for-event-alignment-in-tests.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  bump_version.py  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: consolidate_cache.py  discover_test_paths.py
.github/workflows/: cancel-smoke.yml  codeql.yml  flow-smoke.yml  ghcr-selfhost.yml  lint.yml  llm-cache-consolidate.yml  llm-cache-refresh.yml  notify-deploy.yml  osv-scanner.yml  pages.yml  pypi.yml  staging-source-guard.yml  stale.yml  sync-staging.yml  test-demos.yml  testpypi.yml  tests.yml  trigger-deploy-build.yml  trigger-selfhost-images.yml  update-docs.yml  uv-lockfile-check.yml
.run/pycharm/: Python tests for all.run.xml  Python tests for test_chat.run.xml  Python tests for test_evals.run.xml  Python tests for test_interfaces.run.xml  Python tests for test_queries.run.xml  Python tests for test_routing.run.xml  Template Python tests.run.xml  (+5 more)
agent-service/: README.md  package-lock.json  package.json  tsconfig.json
benchmarks/: __init__.py
codesandbox-service/: README.md  package-lock.json  package.json  tsconfig.json
data/: labelled_data.json  students.json
demo-sites/: README.md  docker-compose.yml
deploy/: Dockerfile  README.md  cloudbuild-preview.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  entrypoint.sh
desktop/: Dockerfile  README.md  camera.sh  desktop.sh  device.sh  display.sh  startup.sh  supervisord.conf  update_vnc_password.sh
docs/: open-source-readiness-plan.md
droid/: __init__.py  demo_meta.py  helpers.py  logger.py  manager_registry.py  session_details.py  settings.py  spending_limits.py  syntax_highlight.py
evals/: README.md  generate_initial_plans.py
guides/: CALL_RECORDING.md  GKE_EPHEMERAL_STORAGE.md  INFRA.md  LOCAL_ASSISTANTS.md  TELEMETRY.md
logs/: README.md  download_ci_logs.sh
real_estate_demo/: call.py  demo_flow.py  flows.md  main.py  new_terminal_helper.py  stuff_tried.txt  test_2.ipynb  test_call.py  todo.md  voice_demo.py  wizard.py  wizard_2.py
sandboxes/: controller.py  scenario_builder.py  utils.py
scripts/: add_credits.py  benchmark_slow_brain_latency.py  check_git_identity.sh  check_no_release_versioning.py  clone_adjacent.sh  cloud-bootstrap.sh  compose-cli.sh  configure-git-identity.sh  copy_contexts.py  create_job.py  debug_audio.py  debug_project.py  delete_livekit_room.py  download_session_data.py  draw_architecture_diagrams.py  draw_diagram.py  echo_responder.py  ensure_prereqs.sh  ensure_self_host_desktop_ssh_key.py  fresh_install_smoke.sh  generate_test_audio.py  idle_job_refresh.py  install-compose.sh  install-git-hooks.sh  install-system-deps.sh  install.sh  install_livekit.sh  install_progress.sh  local.sh  prompt_byok_keys.sh  publish_self_host_desktop_ready.py  pull_adjacent.sh  run_slow_brain_model_benchmark.sh  sandbox-dpkg  seed_builtins_catalog.py  self_host_desktop.sh  self_host_env.sh  self_host_runtime.sh  service.sh  setup.sh  (+6 more)
site/: app.js  index.html  styles.css
tests/: ._prepare_shared_project.sh  .cache.json  .grid_search.sh  .kill_failed.sh  .kill_server.sh  .list_all_tests.sh  .parallel_run.sh  .project_cleanup.sh  .test_log_caching.cache.json  .watch_tests.sh  README.md  __init__.py  _parse_args.sh  _prepare_shared_project.py  _shell_common.sh  assertion_helpers.py  async_helpers.py  attach.sh  conftest.py  coordinator_helpers.py  destination_routing_helpers.py  grid_search.sh  helpers.py  kill_failed.sh  kill_server.sh  list_runs.sh  local_orchestra.sh  monitor_resources.sh  orchestra.sh  parallel_cloud_run.sh  parallel_run.sh  project_cleanup.sh  prompts.jsonl  provider_trigger_delivery.py  settings.py  shell_init.zsh  start_local_orchestra.sh  test_agent.py  test_async_admin.py  test_async_logger.py  (+20 more)
unify/: Exceptions.py  __init__.py  _async_logger.py  _caching.py  agent.py  assistants.py  async_admin.py  caching.py  casting.py  chat.py  clients.py  contexts.py  coordinator_voice.py  dataset.py  demo_meta.py  evaluation.py  evaluator.py  exceptions.py  helpers.py  implement.py  logger.py  logging.py  logs.py  manager_registry.py  map.py  multi_llm.py  organizations.py  platform.py  projects.py  repr.py  session_details.py  settings.py  spaces.py  spending_limits.py  syntax_highlight.py  tests.py  types.py  utils.py
unifyai/: __init__.py  chat.py  clients.py  tests.py
unity/: __init__.py  constants.py  demo_meta.py  helpers.py  logger.py  manager_registry.py  session_details.py  settings.py  singleton_registry.py  spending_limits.py  syntax_highlight.py
(+4058 files in other folders)
